@@ -4,7 +4,11 @@ Development Progress	:
 ---------------------------
 
 2012-08-08 (SVN):
-    * oslibs: recompiled x86_64 versions of osx codecs against 10.4 SDK
+    * midi_osx.c: include CoreServices/CoreServices.h to fix compilation
+      against 10.6 SDK.
+
+2012-08-08 (SVN):
+    * oslibs: recompiled x86_64 versions of osx codecs against 10.6 SDK
       using a gcc-5666.3/cctools-806 based cross-toolchain as described
       at https://github.com/Tatsh/xchain/.
 
